--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,19 +1,95 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        {# Run `composer require symfony/webpack-encore-bundle`
-           and uncomment the following Encore helpers to start using Symfony UX #}
-        {% block stylesheets %}
-            {#{{ encore_entry_link_tags('app') }}#}
-        {% endblock %}
+<html lang="en">
+<head>
+    <title>{%block title %}Prod{%endblock%}</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <!--link rel="stylesheet" href="{{ asset('style.css') }}"-->
 
-        {% block javascripts %}
-            {#{{ encore_entry_script_tags('app') }}#}
-        {% endblock %}
-    </head>
-    <body>
-        {% block body %}{% endblock %}
+    {% block stylesheet %}
+        {#{{encore_entry_link_tags('app')}}#}
+    {% endblock %}
+
+    {% block script %}
+        {#{{encore_entry_script_tags('app')}}#}
+    {% endblock %}
+</head>
+<body>
+<noscript>
+    <h4 style="text-align: center">Activez le javascript pour une navigation optimale!</h4>
+</noscript>
+
+<!--<h3>Projet test</h3>-->
+
+<nav class="navbar navbar-expand-sm bg-info navbar-light" style="width: 100%">
+    <div class="container-fluid navigation" >
+
+        <!-- Brand -->
+        <a class="navbar-brand" href="{{ path('home') }}" style="flex:1"><img src="{{asset('logo.png')}}" height="40px" width="48px"></a>
+
+        <!-- Links -->
+        <ul class="navbar-nav">
+
+
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">LISTING SPONSOR</a>
+                <div class="dropdown-menu">
+                    <a class="dropdown-item" href="#">INTRODUCTION EN BOURSE</a>
+                    <a class="dropdown-item" href="postMarche.html.twig">POST MARCHE</a>
+                </div>
+            </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">INGENIERIE FINANCIERE</a>
+                <div class="dropdown-menu">
+                    <a class="dropdown-item" href="#">OPERATIONS COMPLEXES</a>
+                    <a class="dropdown-item" href="#">ANALYSE FINANCIERE</a>
+                </div>
+            </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown"> COMMUNICATION FINANCIERE </a>
+                <div class="dropdown-menu">
+                    <a class="dropdown-item" href="#">CONSEIL ET STRATEGIE</a>
+                    <a class="dropdown-item" href="#">DIFFUSION</a>
+                </div>
+            </li>
+
+            <li class="nav-item">
+                <a class="nav-link" href="#">
+                    BACK-OFFICE TITRES
+                </a>
+            </li>
+
+            <li class="nav-item">
+                <a class="nav-link" href="{{ path('contact') }}">
+                    CONTACT
+                </a>
+            </li>
+
+
+            <li class="nav-item">
+                {% if app.user.email is defined %}
+                    <a class="nav-link" href="{{ path('front_dashboard') }}">
+                        MON ESPACE
+                    </a>
+                {% else %}
+                    <a class="nav-link" href="{{ path('app_login') }}">
+                        CONNEXION
+                    </a>
+                {% endif %}
+            </li>
+        </ul>
+    </div>
+    </nav>
+
+
+    {% block body %}
+
+    {% endblock %}
     </body>
+</html>
 </html>
